feat: 支持检索副本范围重建
